kubernetes/configurations.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Configuration

# Named references to define the behavior of var substitution and reference settings
nameReference:
- kind: ConfigMap
  version: v1
  fieldSpecs:
  - path: spec/template/spec/containers/envFrom/configMapRef/name
    kind: Deployment
- kind: Secret
  version: v1
  fieldSpecs:
  - path: spec/template/spec/containers/envFrom/secretRef/name
    kind: Deployment
- kind: Service
  version: v1
  fieldSpecs:
  - path: spec/rules/http/paths/backend/service/name
    kind: Ingress
